--- a/CurveDentalManagement.UI/src/app/core/footer/footer.component.html
+++ b/CurveDentalManagement.UI/src/app/core/footer/footer.component.html
@@ -1,5 +1,7 @@
-<footer class="footer bg-body-tertiary">
-    <div class="container-fluid p-3 p-md-3">
-        <p>footer component</p>
+<footer class="footer bg-body-tertiary border-top">
+    <div class="container-fluid p-3 p-md-3 d-flex justify-content-center align-items-center">
+        <a routerlink="/" aria-label="Curve Dental" class="navbar-brand me-md-2 me-0" href="#/">
+            <img src="curve-dental-logo.svg" alt="Curve Dental" class="d-inline-block align-top" style="height: 20px;"/>
+        </a>
     </div>
 </footer>
