--- a/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
@@ -7,17 +7,28 @@
 
     <!-- Search Box and Buttons -->
     <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
-      <input type="text" class="form-control" />
-      <button type="button" class="btn btn-primary">Search</button>
-      <button type="button" class="btn btn-dark">Reset</button>
+      <input type="text" class="form-control" placeholder="Search..." #queryText />
+      <button type="button" class="btn btn-primary" (click)="onSearch(queryText.value)">Search</button>
+      <button type="button" class="btn btn-dark" (click)="onReset(queryText)">Reset</button>
     </div>
   </div>
 </header>
+
+<!-- Chart Display -->
+<div class="card m-4">
+  <div class="card-body">
+    <ng-container *ngIf="staffs$ | async as staffs">
+      <app-staff-chart [staffs]="staffs"></app-staff-chart>
+    </ng-container>
+  </div>
+</div>
+
+<!-- Table List -->
 <div class="card m-4">
   <div class="card-body">
     <ng-container *ngIf="staffs$ | async as staffs">
       <div class="overflow-x-auto">
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered table-hover text-nowrap">
           <thead class="text-nowrap text-center">
             <tr>
               <th scope="col">Full Name</th>
@@ -48,4 +59,25 @@
       </div>
     </ng-container>
   </div>
+
+<!-- Pagination -->
+<div class="overflow-x-auto">
+  <div class="d-flex justify-content-center">
+    <div class="pagination-container">
+      <ngb-pagination
+        [collectionSize]="totalCount"
+        [(page)]="pageNumber"
+        [pageSize]="pageSize"
+        [maxSize]="10"
+        aria-label="Pagination"
+        [directionLinks]="false"
+        class="isolate inline-flex -space-x-px rounded-md shadow-xs"
+        (pageChange)="getPage($event)"
+      >
+      </ngb-pagination>
+    </div>
+  </div>
 </div>
+  
+</div>
+
