--- a/CurveDentalManagement.UI/src/app/features/staff/add-staff/add-staff.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/add-staff/add-staff.component.html
@@ -1,1 +1,55 @@
-<p>add-staff works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3">Add New Staff</h1>
+  
+      <!-- Back Button -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 mb-3">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/staffs']">Back</button>
+      </div>
+    </div>
+  </header>
+  
+  <div class="card m-4">
+    <div class="card-body">
+      <form>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md mb-3 mb-md-0">
+              <label for="firstName" class="form-label">First Name:</label>
+              <input type="text" class="form-control" id="firstName">
+            </div>
+            <div class="col-12 col-md mb-3 mb-md-0">
+              <label for="lastName" class="form-label">Last Name:</label>
+              <input type="text" class="form-control" id="lastName">
+            </div>
+            <div class="col-12 col-md mb-3 mb-md-0">
+              <label for="email" class="form-label">Email Address:</label>
+              <input type="text" class="form-control" id="email">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+              <label for="firstName" class="form-label">First Name:</label>
+              <input type="text" class="form-control" id="firstName">
+            </div>
+            <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+              <label for="lastName" class="form-label">Last Name:</label>
+              <input type="text" class="form-control" id="lastName">
+            </div>
+            <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+              <label for="email" class="form-label">Email Address:</label>
+              <input type="text" class="form-control" id="email">
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
+              <button type="button" class="btn btn-primary me-md-2 mb-2 mb-md-0">Update</button>
+              <button type="button" class="btn btn-dark">Delete</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
