--- a/CurveDentalManagement.UI/src/app/app.component.html
+++ b/CurveDentalManagement.UI/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header />
+<div class="header-top">
+    <app-header />
+</div>
 <div class="container-fluid">
     <div class="row flex-xl-nowrap">
         <div class="col-12 col-lg-2 border-end">
@@ -8,5 +10,7 @@
             <router-outlet />
         </div>
     </div>
-    <app-footer />
+    <div class="footer">
+        <app-footer />
+    </div>
 </div>
