--- a/CurveDentalManagement.UI/src/app/core/header/header.component.html
+++ b/CurveDentalManagement.UI/src/app/core/header/header.component.html
@@ -1,8 +1,7 @@
-<header class="navbar navbar-expand navbar-dark px-4 flex-column flex-md-row border-bottom header-top">
-    <a routerlink="/" aria-label="NG Bootstrap" class="navbar-brand me-md-2 me-0" href="#/">
+<header class="navbar navbar-expand navbar-dark flex-column flex-md-row border-bottom">
+    <a routerlink="/" aria-label="Curve Dental" class="navbar-brand me-md-2 me-0 ms-4" href="#/">
         <img src="curve-dental-logo.svg" alt="Curve Dental Logo" class="d-inline-block align-top" style="height: 30px;"/>
     </a>
 </header>
-
 
 
