--- a/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
+++ b/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
@@ -11,10 +11,11 @@
   <div class="toc-item mb-3">
     <ul class="nav flex-column">
       <li><a class="toc-link mb-3" href="#">Dashboard</a></li>
-      <li><a class="toc-link mb-3" href="#">Staffs</a></li>
+      <li><a class="toc-link mb-3" href="/admin/staffs">Staffs</a></li>
       <li><a class="toc-link mb-3" href="#">Patients</a></li>
       <li><a class="toc-link mb-3" href="#">Treatments</a></li>
       <li><a class="toc-link mb-3" href="#">Appointments</a></li>
+      <li><a class="toc-link mb-3" href="#">User Account</a></li>
       <li><a class="toc-link mb-3" href="#">Logout</a></li>
     </ul>
   </div>
