--- a/CurveDentalManagement.UI/src/app/features/staff/staff-chart/staff-chart.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/staff-chart/staff-chart.component.html
@@ -3,9 +3,13 @@
     <div class="chart">
       <canvas id="barChart"></canvas>
     </div>
+  </div>
+
+
   
-    <!-- Doughnut Chart -->
+   <!-- <div class="chart-container">  
     <div class="chart">
       <canvas id="doughnutChart"></canvas>
     </div>
   </div>
+-->
