--- a/CurveDentalManagement.UI/src/app/features/staff/edit-staff/edit-staff.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/edit-staff/edit-staff.component.html
@@ -1,1 +1,82 @@
-<p>edit-staff works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 ">Update Staff Information Form</h1>
+  
+      <!-- Back Button -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/staffs']">Back</button>
+      </div>
+    </div>
+</header>
+
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="model; else notFound">
+            <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="firstName" class="form-label">First Name:</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="model.firstName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="lastName" class="form-label">Last Name:</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="model.lastName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="email" class="form-label">Email Address:</label>
+                            <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model.email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+                          <label for="sex" class="form-label">Gender:</label>
+                          <input type="text" class="form-control" id="sex" name="sex" [(ngModel)]="model.sex">
+                        </div>
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+                          <label for="phone" class="form-label">Phone Number:</label>
+                          <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="model.phone">
+                        </div>
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+                          <label for="age" class="form-label">Age:</label>
+                          <input type="text" class="form-control" id="age" name="age" [(ngModel)]="model.age">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+                          <label for="staffRole" class="form-label">Role / Position:</label>
+                          <input type="text" class="form-control" id="staffRole" name="staffRole" [(ngModel)]="model.staffRole">
+                        </div>
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0">
+                          <label for="address" class="form-label">Address:</label>
+                          <input type="text" class="form-control" id="address" name="address" [(ngModel)]="model.address">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
+                          <button type="button" class="btn btn-custom me-md-2 mb-2 mb-md-0" type="submit">Update Staff</button>
+                          <button type="button" class="btn btn-danger me-md-2 mb-2 mb-md-0" type="button" (click)="onDelete()">Delete Staff</button>
+                          <button type="button" class="btn btn-dark me-md-2 mb-2 mb-md-0"  type="button" [routerLink]="['/admin/staffs']">Back</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+      </ng-container>
+      <ng-template #notFound>
+        <div class="alert alert-warning mt-3" role="alert">
+         Staff Not Found!
+        </div>
+      </ng-template>
+    </div>
+</div>  
+
+<div *ngIf="showToast" class="toast-container position-fixed top-0 end-0 p-3">
+    <ngb-toast
+      [autohide]="true"
+      [delay]="2000"
+      class="bg-success text-white"
+      (hidden)="showToast = false">
+      {{ toastMessage }}
+    </ngb-toast>
+</div>
