--- a/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
@@ -5,7 +5,7 @@
 
     <!-- Search Box and Buttons -->
     <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
-      <input type="text" class="form-control" placeholder="Search..." #queryText />
+      <input type="text" class="form-control" placeholder="Search.." #queryText />
       <button type="button" class="btn btn-primary" (click)="onSearch(queryText.value)">Search</button>
       <button type="button" class="btn btn-dark" (click)="onReset(queryText)">Reset</button>
     </div>
@@ -15,6 +15,7 @@
 <!-- Chart Display -->
 <div class="card m-4">
   <div class="card-body">
+    <h3 class="text-center">Staff Role Distribution</h3>
     <ng-container *ngIf="staffs$ | async as staffs">
       <app-staff-chart [staffs]="allStaffs"></app-staff-chart>
     </ng-container>
@@ -26,7 +27,7 @@
   <div class="card-body">
     <ng-container *ngIf="staffs$ | async as staffs">
       <div class="overflow-x-auto">
-        <table class="table table-striped table-bordered table-hover text-nowrap">
+        <table class="table table-striped table-bordered table-hover text-nowrap" *ngIf="staffs.length > 0; else noResults">
           <thead class="text-nowrap text-center">
             <tr>
               <th scope="col">Full Name</th>
@@ -34,7 +35,6 @@
               <th scope="col">Email</th>
               <th scope="col">Phone Number</th>
               <th scope="col">Address</th>
-              <th></th>
               <th></th>
             </tr>
           </thead>
@@ -46,14 +46,20 @@
               <td>{{ staff.phone }}</td>
               <td>{{ staff.address }}</td>
               <td>
-                <button type="button" class="btn btn-custom-outline">View</button>
-              </td>
-              <td>
                 <button type="button" class="btn btn-custom" [routerLink]="['/admin/staffs', staff.id]">Update</button>
               </td>
             </tr>
           </tbody>
         </table>
+        <!-- No Results Template -->
+        <ng-template #noResults>
+          <div class="text-center text-muted py-3">
+            
+            <ngb-alert [dismissible]="false">
+              No Staff Members Found Matching Your Search.
+            </ngb-alert>
+          </div>
+        </ng-template>
       </div>
     </ng-container>
   </div>
