--- a/CurveDentalManagement.UI/src/app/features/staff/edit-staff/edit-staff.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/edit-staff/edit-staff.component.html
@@ -1,7 +1,7 @@
 <header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
       <!-- Title -->
-      <h1 class="start me-auto me-md-none h3 ">Update Staff Information Form</h1>
+      <h1 class="start me-auto me-md-none h3 ">Update Staff Form</h1>
   
       <!-- Back Button -->
       <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
