--- a/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
+++ b/CurveDentalManagement.UI/src/app/features/staff/staff-list/staff-list.component.html
@@ -1,6 +1,6 @@
 <header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
   <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
-    <!-- Add Patient Button -->
+    <!-- Add Button -->
     <button class="btn btn-success ms-2 mb-2" [routerLink]="['/admin/staffs/add']">Add New Staff</button>
 
     <!-- Search Box and Buttons -->
