--- a/CurveDentalManagement.UI/src/app/features/patient/add-patient/add-patient.component.html
+++ b/CurveDentalManagement.UI/src/app/features/patient/add-patient/add-patient.component.html
@@ -1,1 +1,78 @@
-<p>add-patient works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 ">Patient Information Form</h1>
+
+       <!-- Back Button -->
+       <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 ">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/staffs']">Back</button>
+      </div>
+    </div>
+</header>
+
+<div class="card m-4">
+    <div class="card-body">
+        <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                      <label for="firstName" class="form-label">First Name:</label>
+                      <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="model.firstName">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                      <label for="lastName" class="form-label">Last Name:</label>
+                      <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="model.lastName">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                      <label for="email" class="form-label">Email Address:</label>
+                      <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model.email">
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="dateOfBirth" class="form-label">Date Of Birth:</label>
+                        <div class="input-group">
+                            <input
+                                class="form-control"
+                                placeholder="yyyy-mm-dd"
+                                name="dateOfBirth"
+                                [(ngModel)]="model.dateOfBirth"
+                                ngbDatepicker
+                                #d="ngbDatepicker"
+                            />
+                            <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="age" class="form-label">Age:</label>
+                        <input type="text" class="form-control" id="age" name="age" [(ngModel)]="model.age">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="phoneNumber" class="form-label">Phone Number:</label>
+                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" [(ngModel)]="model.phoneNumber">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
+                      <button type="button" class="btn btn-success me-md-2 mb-2 mb-md-0"  type="submit">Add New Staff</button>
+                    </div>
+                </div>
+            </div>
+        </form>    
+    </div>
+</div>
+
+<div *ngIf="showToast" class="toast-container position-fixed top-0 end-0 p-3">
+    <ngb-toast
+      [autohide]="true"
+      [delay]="2000"
+      class="bg-success text-white"
+      (hidden)="showToast = false">
+      Patient Added Successfully!
+    </ngb-toast>
+</div>
