--- a/CurveDentalManagement.UI/src/app/features/patient/add-patient/add-patient.component.html
+++ b/CurveDentalManagement.UI/src/app/features/patient/add-patient/add-patient.component.html
@@ -5,7 +5,7 @@
 
        <!-- Back Button -->
        <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 ">
-        <button type="button" class="btn btn-dark" [routerLink]="['/admin/staffs']">Back</button>
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/patients']">Back</button>
       </div>
     </div>
 </header>
@@ -15,6 +15,7 @@
         <form #form="ngForm" (ngSubmit)="onFormSubmit()">
             <div class="container">
                 <div class="row">
+                    <h1 class="pb-2 border-bottom mt-3 display-6">Personal Information</h1>
                     <div class="col-12 col-md mb-3 mb-md-0">
                       <label for="firstName" class="form-label">First Name:</label>
                       <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="model.firstName">
@@ -27,27 +28,15 @@
                       <label for="email" class="form-label">Email Address:</label>
                       <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model.email">
                     </div>
-                    
-                </div>
-                <div class="row">
                     <div class="col-12 col-md mb-3 mb-md-0">
                         <label for="dateOfBirth" class="form-label">Date Of Birth:</label>
                         <div class="input-group">
-                            <input
-                                class="form-control"
-                                placeholder="yyyy-mm-dd"
-                                name="dateOfBirth"
-                                [(ngModel)]="model.dateOfBirth"
-                                ngbDatepicker
-                                #d="ngbDatepicker"
-                            />
-                            <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
-                                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-                                </svg>
-                            </button>
+                            <input class="form-control" id="dateOfBirth" type="date" name="dateOfBirth" [ngModel]="model.dateOfBirth | date: 'yyyy-MM-dd'" (ngModelChange)="model.dateOfBirth = $event" value="{{model.dateOfBirth}}"/>       
                         </div>
+                        
                     </div>
+                </div>
+                <div class="row mt-3">
                     <div class="col-12 col-md mb-3 mb-md-0">
                         <label for="age" class="form-label">Age:</label>
                         <input type="text" class="form-control" id="age" name="age" [(ngModel)]="model.age">
@@ -56,10 +45,42 @@
                         <label for="phoneNumber" class="form-label">Phone Number:</label>
                         <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" [(ngModel)]="model.phoneNumber">
                     </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="gender" class="form-label">Gender:</label>
+                        <input type="text" class="form-control" id="gender" name="gender" [(ngModel)]="model.gender">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="address" class="form-label">Home Address:</label>
+                        <input type="text" class="form-control" id="address" name="address" [(ngModel)]="model.address">
+                    </div>
                 </div>
-                <div class="row">
+                <div class="row mt-3">
+                    <h1 class="pb-2 border-bottom mt-3 display-6">Insurance Information</h1>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="insuranceProvider" class="form-label">Insurance Provider:</label>
+                        <input type="text" class="form-control" id="insuranceProvider" name="insuranceProvider" [(ngModel)]="model.insuranceProvider">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="insurancePolicyNumber" class="form-label">Insurance Policy Number:</label>
+                        <input type="text" class="form-control" id="insurancePolicyNumber" name="insurancePolicyNumber" [(ngModel)]="model.insurancePolicyNumber">
+                    </div>
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="insuranceExpiryDate" class="form-label">Insurance Expiry Date:</label>
+                        <div class="input-group">
+                            <input class="form-control" id="dateOfBirth" type="date" name="insuranceExpiryDate" [ngModel]="model.insuranceExpiryDate | date: 'yyyy-MM-dd'" (ngModelChange)="model.insuranceExpiryDate = $event" value="{{model.insuranceExpiryDate}}"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-12 col-md mb-3 mb-md-0">
+                        <label for="insuranceDetails" class="form-label">Insurance Details:</label>
+                        <textarea class="form-control" id="insuranceDetails" name="insuranceDetails" [(ngModel)]="model.insuranceDetails"></textarea>
+                    </div>
+                </div>
+                <div class="row mt-3">
                     <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
-                      <button type="button" class="btn btn-success me-md-2 mb-2 mb-md-0"  type="submit">Add New Staff</button>
+                      <button type="button" class="btn btn-success me-md-2 mb-2 mb-md-0"  type="submit">Add New Patient</button>
+                      <button type="button" class="btn btn-dark me-md-2 mb-2 mb-md-0"  type="button" [routerLink]="['/admin/patients']">Back to Patient List</button>
                     </div>
                 </div>
             </div>
