--- a/CurveDentalManagement.UI/src/app/features/patient/edit-patient/edit-patient.component.html
+++ b/CurveDentalManagement.UI/src/app/features/patient/edit-patient/edit-patient.component.html
@@ -1,1 +1,107 @@
-<p>edit-patient works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 ">Update Patient Information Form</h1>
+
+       <!-- Back Button -->
+       <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 ">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/patients']">Back</button>
+      </div>
+    </div>
+</header>
+
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="model; else notFound">
+            <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="pb-2 border-bottom mt-3 display-6">Personal Information</h1>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="firstName" class="form-label">First Name:</label>
+                          <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="model.firstName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="lastName" class="form-label">Last Name:</label>
+                          <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="model.lastName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="email" class="form-label">Email Address:</label>
+                          <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model.email">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="dateOfBirth" class="form-label">Date Of Birth:</label>
+                            <div class="input-group">
+                                <input class="form-control" id="dateOfBirth" type="date" name="dateOfBirth" [ngModel]="model.dateOfBirth | date: 'yyyy-MM-dd'" (ngModelChange)="model.dateOfBirth = $event" value="{{model.dateOfBirth}}"/>   
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="age" class="form-label">Age:</label>
+                            <input type="text" class="form-control" id="age" name="age" [(ngModel)]="model.age">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="phoneNumber" class="form-label">Phone Number:</label>
+                            <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" [(ngModel)]="model.phoneNumber">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="gender" class="form-label">Gender:</label>
+                            <input type="text" class="form-control" id="gender" name="gender" [(ngModel)]="model.gender">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="address" class="form-label">Home Address:</label>
+                            <input type="text" class="form-control" id="address" name="address" [(ngModel)]="model.address">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <h1 class="pb-2 border-bottom mt-3 display-6">Insurance Information</h1>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="insuranceProvider" class="form-label">Insurance Provider:</label>
+                            <input type="text" class="form-control" id="insuranceProvider" name="insuranceProvider" [(ngModel)]="model.insuranceProvider">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="insurancePolicyNumber" class="form-label">Insurance Policy Number:</label>
+                            <input type="text" class="form-control" id="insurancePolicyNumber" name="insurancePolicyNumber" [(ngModel)]="model.insurancePolicyNumber">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="insuranceExpiryDate" class="form-label">Insurance Expiry Date:</label>
+                            <div class="input-group">
+                                <input class="form-control" id="dateOfBirth" type="date" name="insuranceExpiryDate" [ngModel]="model.insuranceExpiryDate | date: 'yyyy-MM-dd'" (ngModelChange)="model.insuranceExpiryDate = $event" value="{{model.insuranceExpiryDate}}"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="insuranceDetails" class="form-label">Insurance Details:</label>
+                            <textarea class="form-control" id="insuranceDetails" name="insuranceDetails" [(ngModel)]="model.insuranceDetails"></textarea>
+                        </div>
+                    </div>
+    
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
+                            <button type="button" class="btn btn-custom me-md-2 mb-2 mb-md-0" type="submit">Update Patient</button>
+                            <button type="button" class="btn btn-danger me-md-2 mb-2 mb-md-0" type="button" (click)="onDelete()">Delete Patient</button>
+                            <button type="button" class="btn btn-dark me-md-2 mb-2 mb-md-0"  type="button" [routerLink]="['/admin/patients']">Back to Patient List</button>
+                          </div>
+                    </div>
+                </div>
+            </form>   
+        </ng-container>
+        <ng-template #notFound>
+            <div class="alert alert-warning mt-3" role="alert">
+             Patient Not Found!
+            </div>
+        </ng-template>
+    </div>
+</div>        
+
+<div *ngIf="showToast" class="toast-container position-fixed top-0 end-0 p-3">
+    <ngb-toast
+      [autohide]="true"
+      [delay]="2000"
+      class="bg-success text-white"
+      (hidden)="showToast = false">
+      {{ toastMessage }}
+    </ngb-toast>
+</div>
