--- a/CurveDentalManagement.UI/src/app/features/patient/patient-chart/patient-chart.component.html
+++ b/CurveDentalManagement.UI/src/app/features/patient/patient-chart/patient-chart.component.html
@@ -1,1 +1,9 @@
-<p>patient-chart works!</p>
+<div class="chart-container">
+  <div class="chart">
+    <canvas id="doughnutChart"></canvas>
+  </div>
+  <div class="chart">
+    <canvas id="barChart"></canvas>
+  </div>
+
+</div>
