--- a/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
+++ b/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
@@ -13,6 +13,7 @@
       <li><a class="toc-link mb-3" href="#">Dashboard</a></li>
       <li><a class="toc-link mb-3" href="/admin/staffs">Staffs</a></li>
       <li><a class="toc-link mb-3" href="/admin/patients">Patients</a></li>
+      <li><a class="toc-link mb-3" href="/admin/doctors">Doctors</a></li>
       <li><a class="toc-link mb-3" href="#">Treatments</a></li>
       <li><a class="toc-link mb-3" href="#">Appointments</a></li>
       <li><a class="toc-link mb-3" href="#">User Account</a></li>
