--- a/CurveDentalManagement.UI/src/app/features/doctor/doctor-list/doctor-list.component.html
+++ b/CurveDentalManagement.UI/src/app/features/doctor/doctor-list/doctor-list.component.html
@@ -1,1 +1,61 @@
-<p>doctor-list works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
+      <!-- Add Button -->
+      <button class="btn btn-success ms-2 mb-2" [routerLink]="['/admin/doctors/add']">Add New Doctor</button>
+  
+      <!-- Search Box and Buttons -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
+        <input type="text" class="form-control" placeholder="Search.." #queryText />
+        <button type="button" class="btn btn-primary" (click)="onSearch(queryText.value)">Search</button>
+        <button type="button" class="btn btn-dark" (click)="onReset(queryText)">Reset</button>
+      </div>
+    </div>
+</header>
+
+<!-- Table List -->
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="doctors$ | async as doctors">
+            <div class="overflow-x-auto">
+                <table class="table table-striped table-bordered table-hover text-nowrap" *ngIf="doctors.length > 0; else noResults">
+                    <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Full Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Contact Number</th>
+                            <th scope="col">License Number</th>
+                            <th scope="col">Specialization</th>
+                            <th scope="col">Department</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-center">
+                        <tr *ngFor="let doctor of doctors">
+                            <td>Dr. {{ doctor.firstName }} {{ doctor.lastName }}</td>
+                            <td>{{ doctor.email }}</td>
+                            <td>{{ doctor.contactNumber }}</td>
+                            <td>{{ doctor.licenseNumber }}</td>
+                            <td>{{ doctor.specialization }}</td>
+                            <td>{{ doctor.department }}</td>
+                            
+                            <td>
+                                <button type="button" class="btn btn-custom-outline me-2" >View</button>
+                                <button type="button" class="btn btn-custom">Update</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                  <!-- No Results Template -->
+                  <ng-template #noResults>
+                    <div class="text-center text-muted py-3">
+                        <ngb-alert [dismissible]="false">
+                            No Doctor Found Matching Your Search.
+                        </ngb-alert>
+                    </div>
+                </ng-template>
+
+            </div>
+        </ng-container>
+    </div>
+</div>        
