--- a/CurveDentalManagement.UI/src/app/features/doctor/edit-doctor/edit-doctor.component.html
+++ b/CurveDentalManagement.UI/src/app/features/doctor/edit-doctor/edit-doctor.component.html
@@ -1,1 +1,99 @@
-<p>edit-doctor works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 ">Update Doctor Information Form</h1>
+
+       <!-- Back Button -->
+       <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 ">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/doctors']">Back</button>
+      </div>
+    </div>
+</header>
+
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="model; else notFound">
+            <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="pb-2 border-bottom mt-3 display-6">Doctor Information</h1>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="firstName" class="form-label">First Name:</label>
+                          <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="model.firstName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="lastName" class="form-label">Last Name:</label>
+                          <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="model.lastName">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                          <label for="email" class="form-label">Email Address:</label>
+                          <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model.email">
+                        </div>
+                    </div>
+              
+                    <div class="row mt-3">
+                        <h1 class="pb-2 border-bottom mt-3 display-6">Professional Information</h1>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="specialization" class="form-label">Specialization:</label>
+                            <input type="text" class="form-control" id="specialization" name="specialization" [(ngModel)]="model.specialization">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="department" class="form-label">Department:</label>
+                            <input type="text" class="form-control" id="department" name="department" [(ngModel)]="model.department">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="yearsOfExperience" class="form-label">Years Of Experience:</label>
+                            <input type="text" class="form-control" id="yearsOfExperience" name="yearsOfExperience" [(ngModel)]="model.yearsOfExperience">
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="licenseNumber" class="form-label">License Number:</label>
+                            <input type="text" class="form-control" id="licenseNumber" name="licenseNumber" [(ngModel)]="model.licenseNumber">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="dentalSchool" class="form-label">Dental School:</label>
+                            <textarea class="form-control" id="dentalSchool" name="dentalSchool" [(ngModel)]="model.dentalSchool"></textarea>
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="officeAddress" class="form-label">Office Address:</label>
+                            <textarea class="form-control" id="officeAddress" name="officeAddress" [(ngModel)]="model.officeAddress"></textarea>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="emergencyContact" class="form-label">Emergency Contact:</label>
+                            <textarea class="form-control" id="emergencyContact" name="emergencyContact" [(ngModel)]="model.emergencyContact"></textarea>
+                        </div>
+                        <div class="col-12 col-md mb-3 mb-md-0">
+                            <label for="schedule" class="form-label">Schedule:</label>
+                            <textarea class="form-control" id="schedule" name="schedule" [(ngModel)]="model.schedule"></textarea>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 col-md mb-3 mt-3 mb-md-0 d-flex flex-column flex-md-row">
+                            <button type="button" class="btn btn-custom me-md-2 mb-2 mb-md-0" type="submit">Update Doctor</button>
+                            <button type="button" class="btn btn-danger me-md-2 mb-2 mb-md-0" type="button" (click)="onDelete()">Delete Doctor</button>
+                            <button type="button" class="btn btn-dark me-md-2 mb-2 mb-md-0"  type="button" [routerLink]="['/admin/doctors']">Back to Doctor List</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </ng-container>
+        <ng-template #notFound>
+            <div class="alert alert-warning mt-3" role="alert">
+             Doctor Not Found!
+            </div>
+        </ng-template>
+    </div>
+</div>
+
+<div *ngIf="showToast" class="toast-container position-fixed top-0 end-0 p-3">
+    <ngb-toast
+      [autohide]="true"
+      [delay]="2000"
+      class="bg-success text-white"
+      (hidden)="showToast = false">
+      {{ toastMessage }}
+    </ngb-toast>
+</div>
