--- a/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
@@ -1,1 +1,64 @@
-<p>doctor-detail works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 px-3">Doctor Details</h1>
+  
+      <!-- Back Button -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 px-3">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/doctors']">Back</button>
+      </div>
+    </div>
+</header>
+
+<!-- Table List -->
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="doctors$ | async as doctor">
+            <div class="overflow-x-auto">
+                <h4 class="pb-2 border-bottom mt-3">Doctor Information</h4>
+                <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
+                    <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Full Name</th>
+                            <th scope="col">Email Address</th>
+                            <th scope="col">Specialization</th>
+                            <th scope="col">Department</th>
+                             <th scope="col">License Number</th>
+                        </tr>
+                    </thead>
+                     <tbody class="text-center">
+                        <tr>
+                            <td>Dr. {{ doctor.firstName }} {{ doctor.lastName }}</td>
+                            <td>{{ doctor.email }}</td>
+                            <td>{{ doctor.specialization }}</td>
+                            <td>{{ doctor.department }}</td>
+                              <td>{{ doctor.licenseNumber }}</td>
+                        </tr>    
+                     </tbody>
+                </table>
+                <h4 class="pb-2 border-bottom mt-3">Professional Information</h4>
+                 <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
+                    <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Years Of Experience</th>
+                            <th scope="col">Dental School</th>
+                            <th scope="col">Office Address</th>
+                            <th scope="col">Emergency Contact</th>
+                            <th scope="col">Schedule</th>
+                        </tr>
+                    </thead>
+                     <tbody class="text-center">
+                        <tr>
+                            <td>{{ doctor.yearsOfExperience }}</td>
+                            <td>{{ doctor.dentalSchool }}</td>
+                            <td>{{ doctor.officeAddress }}</td>
+                            <td>{{ doctor.emergencyContact}}</td>
+                            <td>{{ doctor.schedule}}</td>
+                        </tr>    
+                     </tbody>
+                </table>
+            </div>
+        </ng-container>
+    </div>
+</div>
+
