--- a/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
@@ -1,1 +1,96 @@
-<p>treatment-detail works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 px-3">Treatment Details</h1>
+  
+      <!-- Back Button -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 px-3">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/treatments']">Back</button>
+      </div>
+    </div>
+</header>
+
+<!-- Treatment Table List -->
+<div class="card m-4">
+    <div class="card-body">
+         <ng-container *ngIf="treatments$ | async as treatment">
+             <div class="overflow-x-auto">
+                <table class="table table-striped table-bordered table-hover text-nowrap">
+                    <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Treatment Code</th>
+                            <th scope="col">Treatment Name</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">Cost</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody class="text-center text-wrap">
+                        <tr>
+                            <td>{{ treatment.treatmentCode }}</td>
+                            <td>{{ treatment.treatmentName }}</td>
+                            <td>{{ treatment.description }}</td>
+                            <td>{{ treatment.duration }}</td>
+                            <td>{{ treatment.cost }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="table table-striped table-bordered table-hover text-nowrap">
+                     <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Insurance Coverage</th>
+                            <th scope="col">Insurance Coverage Amount</th>
+                            <th scope="col">Follow Up Care</th>
+                            <th scope="col">Risk & Benefits</th>
+                            <th scope="col">indications</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody class="text-center text-wrap">
+                        <tr>
+                            <td>{{ treatment.insuranceCoverage }}</td>
+                            <td>{{ treatment.insuranceCoverageAmount }}</td>
+                            <td>{{ treatment.followUpCare }}</td>
+                            <td>{{ treatment.riskBenefits }}</td>
+                            <td>{{ treatment.indications }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+             </div>
+         </ng-container>
+    </div>
+</div>
+
+<!-- Doctor Table List -->
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="doctors$ | async as doctors">
+            <div *ngIf="doctors.length > 0">
+                <div class="overflow-x-auto">
+                    <h4 class="pb-2 border-bottom mt-3">Doctor(s) Information</h4>
+                    <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
+                        <thead class="text-nowrap text-center">
+                            <tr>
+                                <th scope="col">Full Name</th>
+                                <th scope="col">Email Address</th>
+                                <th scope="col">Specialization</th>
+                                <th scope="col">Department</th>
+                                <th scope="col">License Number</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr *ngFor="let doctor of doctors">
+                                <td>Dr. {{ doctor.firstName }} {{ doctor.lastName }}</td>
+                                <td>{{ doctor.email }}</td>
+                                <td>{{ doctor.specialization }}</td>
+                                <td>{{ doctor.department }}</td>
+                                <td>{{ doctor.licenseNumber }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </ng-container>
+    </div>
+</div>    
