Added UI Components for Appointments

--- a/CurveDentalManagement.UI/src/app/features/treatments/treatment-list/treatment-list.component.html
+++ b/CurveDentalManagement.UI/src/app/features/treatments/treatment-list/treatment-list.component.html
@@ -34,7 +34,7 @@
                             <td>{{ treatment.treatmentName }}</td>
                             <td>{{ treatment.duration }}</td>
                             <td>{{ treatment.cost }}</td>
-                            <td>
+                            <td class="text-wrap">
                                 <span *ngFor="let doctor of treatment.doctors; let i = index">
                                    Dr. {{ doctor.firstName }} {{ doctor.lastName }} <span *ngIf="i < treatment.doctors.length - 1">,</span>
                                 </span>
