--- a/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
@@ -16,7 +16,7 @@
          <ng-container *ngIf="treatments$ | async as treatment">
              <div class="overflow-x-auto">
                 <table class="table table-striped table-bordered table-hover text-nowrap">
-                    <thead class="text-nowrap text-center">
+                    <thead class="text-wrap text-center">
                         <tr>
                             <th scope="col">Treatment Code</th>
                             <th scope="col">Treatment Name</th>
@@ -43,8 +43,7 @@
                             <th scope="col">Insurance Coverage Amount</th>
                             <th scope="col">Follow Up Care</th>
                             <th scope="col">Risk & Benefits</th>
-                            <th scope="col">indications</th>
-                            
+                            <th scope="col">Indications</th>
                         </tr>
                     </thead>
                     <tbody class="text-center text-wrap">
@@ -77,6 +76,7 @@
                                 <th scope="col">Specialization</th>
                                 <th scope="col">Department</th>
                                 <th scope="col">License Number</th>
+                                <th scope="col">Schedule</th>
                             </tr>
                         </thead>
                         <tbody class="text-center">
@@ -86,6 +86,7 @@
                                 <td>{{ doctor.specialization }}</td>
                                 <td>{{ doctor.department }}</td>
                                 <td>{{ doctor.licenseNumber }}</td>
+                                <td>{{ doctor.schedule }}</td>
                             </tr>
                         </tbody>
                     </table>
