Update EF Migrations for Appointments

--- a/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
+++ b/CurveDentalManagement.UI/src/app/core/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
       <li><a class="toc-link mb-3" [routerLink]="['/admin/patients']">Patients</a></li>
       <li><a class="toc-link mb-3" [routerLink]="['/admin/doctors']">Doctors</a></li>
       <li><a class="toc-link mb-3" [routerLink]="['/admin/treatments']">Treatments</a></li>
-      <li><a class="toc-link mb-3" href="#">Appointments</a></li>
+      <li><a class="toc-link mb-3" [routerLink]="['/admin/appointments']">Appointments</a></li>
       <li><a class="toc-link mb-3" href="#">User Account</a></li>
       <li><a class="toc-link mb-3" href="#">Logout</a></li>
     </ul>
