--- a/CurveDentalManagement.UI/src/app/features/appointments/appointment-lists/appointment-lists.component.html
+++ b/CurveDentalManagement.UI/src/app/features/appointments/appointment-lists/appointment-lists.component.html
@@ -1,1 +1,64 @@
-<p>appointment-lists works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between">
+      <!-- Add Button -->
+      <button class="btn btn-success ms-2 mb-2" [routerLink]="['/admin/appointments/add']">Add New Appointment</button>
+  
+      <!-- Search Box and Buttons -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
+        <input type="text" class="form-control" placeholder="Search.." #queryText />
+        <button type="button" class="btn btn-primary" (click)="onSearch(queryText.value)">Search</button>
+        <button type="button" class="btn btn-dark" (click)="onReset(queryText)">Reset</button>
+      </div>
+    </div>
+</header>
+
+<!-- Table List -->
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="appointments$ | async as appointments">
+              <div class="overflow-x-auto">
+                 <table class="table table-striped table-bordered table-hover text-nowrap" *ngIf="appointments.length > 0; else noResults">
+                    <thead class="text-nowrap text-center">
+                        <tr>
+                            <th scope="col">Appointment Code</th>
+                            <th scope="col">Appointment Date</th>
+                            <th scope="col">Appointment Time</th>
+                            <th scope="col">Patient Name</th>
+                            <th scope="col">Assigned Doctor</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-center">
+                         <tr *ngFor="let appointment of appointments">
+                            <td>{{ appointment.appointmentCode }}</td>
+                            <td>{{ appointment.appointmentDate | date:'short' }}</td>
+                            <td>{{ appointment.appointmentTime}}</td>
+                             <td class="text-wrap">
+                                <span *ngFor="let patient of appointment.patients; let i = index">
+                                  {{ patient.firstName }} {{ patient.lastName }} <span *ngIf="i < appointment.patients.length - 1">,</span>
+                                </span>
+                            </td>
+                            <td class="text-wrap">
+                                <span *ngFor="let doctor of appointment.doctors; let i = index">
+                                   Dr. {{ doctor.firstName }} {{ doctor.lastName }} <span *ngIf="i < appointment.doctors.length - 1">,</span>
+                                </span>
+                            </td>
+                             <td>
+                                <button type="button" class="btn btn-custom-outline me-2" [routerLink]="['/admin/appointments/details/', appointment.id]" >View</button>
+                                <button type="button" class="btn btn-custom" [routerLink]="['/admin/appointments', appointment.id]">Update</button>
+                            </td>
+                         </tr>
+                    </tbody>
+                 </table>
+                 <!-- No Results Template -->
+                  <ng-template #noResults>
+                    <div class="text-center text-muted py-3">
+                        <ngb-alert [dismissible]="false">
+                            No Appointment Found Matching Your Search.
+                        </ngb-alert>
+                    </div>
+                </ng-template>
+              </div>
+        </ng-container>
+    </div>
+</div>    
