--- a/CurveDentalManagement.UI/src/app/features/treatments/add-treatment/add-treatment.component.html
+++ b/CurveDentalManagement.UI/src/app/features/treatments/add-treatment/add-treatment.component.html
@@ -16,11 +16,11 @@
              <div class="container">
                 <div class="row">
                     <h1 class="pb-2 border-bottom mt-3 display-6">Treatment Information</h1>
-                    <div class="col-12 col-md mb-3 mb-md-0">
+                    <div class="col-12 col-md mb-3 mb-md-0 mt-3">
                       <label for="treatmentName" class="form-label">Treatment Name:</label>
                       <input type="text" class="form-control" id="treatmentName" name="treatmentName" [(ngModel)]="model.treatmentName">
                     </div>
-                     <div class="col-12 col-md mb-3 mb-md-0">
+                     <div class="col-12 col-md mb-3 mb-md-0 mt-3">
                       <label for="treatmentCode" class="form-label">Treatment Code:</label>
                       <input type="text" class="form-control" id="treatmentCode" name="treatmentName" [(ngModel)]="model.treatmentCode">
                     </div>
